--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="simple">
+    <!-- <div id="simple">
       <h1>Iris</h1>
       <p id="iris-message">Hello! My name is Iris.</p>
       <input id="iris-input" type="text">
@@ -18,7 +18,7 @@
         What is the meaning of life?</br>
         Tell me a joke.</br>
       </p>
-    </div>
+    </div> -->
     <div id="advanced">
       <h1>Axela</h1>
       <p id="axela-message">Hello! My name is Axela.</p>
@@ -26,7 +26,7 @@
       <button id="axela-submit">Submit</button>
       <p>
         <b>Greetings:</b><br>
-        hi, sup, hello, hola, wasup<br>
+        hi, sup, hello, hola, wasup, herro<br>
         <b>Commands:</b><br>
         who, what, where, tell, show<br>
         <b>"Who" Subjects:</b><br>
