--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <b>Commands:</b><br>
         who, what, where, tell, show<br>
         <b>"Who" Subjects:</b><br>
-        you, president, me<br>
+        you, dog, me<br>
         <b>"What" Subjects:</b><br>
         life, pi, love<br>
         <b>"Where" Subjects:</b><br>
