Axela is Now controlled by GLaDOS

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Axela</title>
+    <title>AI</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- <div id="simple">
-      <h1>Iris</h1>
-      <p id="iris-message">Hello! My name is Iris.</p>
+      <div>
+      <h1>Hello My Name Is</h1>
+      <h1>GLaDOS</h1>
+       <img id="Name-AI" src="img/red.gif">
+      <!-- <p id="iris-message">Hello! My name is Iris.</p>
       <input id="iris-input" type="text">
       <button id="iris-submit">Submit</button>
       <p>
@@ -17,11 +19,12 @@
         How old are you?</br>
         What is the meaning of life?</br>
         Tell me a joke.</br>
-      </p>
-    </div> -->
+      </p> -->
+    </div>
     <div id="advanced">
-      <h1>Axela</h1>
-      <p id="axela-message">Hello! My name is Axela.</p>
+      <p><b>Type a command word in the box.</b></p>
+      <b>Try saying "say speech"</b>
+      <p id="axela-message"></p>
       <input id="axela-input" type="text">
       <button id="axela-submit">Submit</button>
       <p>
@@ -32,7 +35,7 @@
         <b>"Who" Subjects:</b><br>
         you, dog, me<br>
         <b>"What" Subjects:</b><br>
-        life, pi, love<br>
+        life, pi, cake<br>
         <b>"Where" Subjects:</b><br>
         me, atlantis, food<br>
         <b>"Tell" Subjects:</b><br>
