Picture of GLaDos

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <div>
+      <div class="GLaDOS">
       <h1>Hello My Name Is</h1>
       <h1>GLaDOS</h1>
-       <img id="Name-AI" src="img/red.gif">
+       <!-- <img id="Name-AI" src="img/glados-gif.gif"> -->
       <!-- <p id="iris-message">Hello! My name is Iris.</p>
       <input id="iris-input" type="text">
       <button id="iris-submit">Submit</button>
